--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,205 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".presentation.screens.MainFragment">
 
-    <androidx.drawerlayout.widget.DrawerLayout
-            android:id="@+id/drawer_layout"
+    <LinearLayout
+        android:id="@+id/constraint_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="@style/Widget.App.Toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="?attr/actionBarSize"
+            app:title="@string/app_name" />
 
-        <LinearLayout
-                android:id="@+id/constraint_layout"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
-                    style="@style/Widget.App.Toolbar"
-                    android:id="@+id/toolbar"
+                <TextView
+                    android:id="@+id/text_movies_header"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:title="@string/app_name" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin_regular"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:text="@string/trending_movies"
+                    android:textAppearance="?textAppearanceHeadline6" />
 
-            <ScrollView
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
+                    android:layout_height="wrap_content">
 
-                <LinearLayout
+                    <include
+                        layout="@layout/list_item_cinematic_trending"
+                        android:visibility="invisible" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_movies"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:clipToPadding="false"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="@dimen/margin_small"
+                        android:paddingVertical="@dimen/margin_x_small"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/list_item_cinematic_trending" />
 
-                    <TextView
-                            android:id="@+id/text_movies_header"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="@dimen/margin_regular"
-                            android:layout_marginTop="@dimen/margin_small"
-                            android:textAppearance="?textAppearanceHeadline6"
-                            android:text="@string/trending_movies" />
+                    <include
+                        android:id="@+id/movies_loading"
+                        layout="@layout/layout_loading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        tools:visibility="gone" />
 
-                    <FrameLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                    <include
+                        android:id="@+id/movies_error"
+                        layout="@layout/layout_error"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:visibility="gone" />
 
-                        <include
-                                layout="@layout/list_item_cinematic_trending"
-                                android:visibility="invisible" />
+                </FrameLayout>
 
-                        <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/recycler_movies"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:paddingHorizontal="@dimen/margin_small"
-                                android:paddingVertical="@dimen/margin_x_small"
-                                android:clipToPadding="false"
-                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                                tools:listitem="@layout/list_item_cinematic_trending" />
+                <TextView
+                    android:id="@+id/text_tvs_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin_regular"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:text="@string/trending_tvs"
+                    android:textAppearance="?textAppearanceHeadline6" />
 
-                        <include
-                                android:id="@+id/movies_loading"
-                                layout="@layout/layout_loading"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                tools:visibility="gone" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                        <include
-                                android:id="@+id/movies_error"
-                                layout="@layout/layout_error"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:visibility="gone" />
+                    <include
+                        layout="@layout/list_item_cinematic_trending"
+                        android:visibility="invisible" />
 
-                    </FrameLayout>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_tvs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="@dimen/margin_small"
+                        android:paddingVertical="@dimen/margin_x_small"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/list_item_cinematic_trending" />
 
-                    <TextView
-                            android:id="@+id/text_tvs_header"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="@dimen/margin_regular"
-                            android:layout_marginTop="@dimen/margin_small"
-                            android:textAppearance="?textAppearanceHeadline6"
-                            android:text="@string/trending_tvs" />
+                    <include
+                        android:id="@+id/tvs_loading"
+                        layout="@layout/layout_loading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        tools:visibility="gone" />
 
-                    <FrameLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                    <include
+                        android:id="@+id/tvs_error"
+                        layout="@layout/layout_error"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:visibility="gone" />
 
-                        <include
-                            layout="@layout/list_item_cinematic_trending"
-                            android:visibility="invisible" />
+                </FrameLayout>
 
-                        <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/recycler_tvs"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:paddingHorizontal="@dimen/margin_small"
-                                android:paddingVertical="@dimen/margin_x_small"
-                                android:clipToPadding="false"
-                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                                tools:listitem="@layout/list_item_cinematic_trending" />
+                <TextView
+                    android:id="@+id/text_people_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin_regular"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:text="@string/trending_people"
+                    android:textAppearance="?textAppearanceHeadline6" />
 
-                        <include
-                                android:id="@+id/tvs_loading"
-                                layout="@layout/layout_loading"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                tools:visibility="gone" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                        <include
-                                android:id="@+id/tvs_error"
-                                layout="@layout/layout_error"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:visibility="gone" />
+                    <include
+                        layout="@layout/list_item_person_trending"
+                        android:visibility="invisible" />
 
-                    </FrameLayout>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_people"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clipToPadding="false"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="@dimen/margin_small"
+                        android:paddingVertical="@dimen/margin_x_small"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:listitem="@layout/list_item_person_trending" />
 
-                    <TextView
-                            android:id="@+id/text_people_header"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="@dimen/margin_regular"
-                            android:layout_marginTop="@dimen/margin_small"
-                            android:textAppearance="?textAppearanceHeadline6"
-                            android:text="@string/trending_people" />
+                    <include
+                        android:id="@+id/people_loading"
+                        layout="@layout/layout_loading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        tools:visibility="gone" />
 
-                    <FrameLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                    <include
+                        android:id="@+id/people_error"
+                        layout="@layout/layout_error"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:visibility="gone" />
 
-                        <include
-                                layout="@layout/list_item_person_trending"
-                                android:visibility="invisible" />
+                </FrameLayout>
 
-                        <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/recycler_people"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:paddingHorizontal="@dimen/margin_small"
-                                android:paddingVertical="@dimen/margin_x_small"
-                                android:clipToPadding="false"
-                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                                tools:listitem="@layout/list_item_person_trending" />
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginHorizontal="@dimen/margin_regular"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:background="?android:attr/listDivider" />
 
-                        <include
-                                android:id="@+id/people_loading"
-                                layout="@layout/layout_loading"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                tools:visibility="gone" />
+                <TextView
+                    android:id="@+id/text_hint"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/margin_regular"
+                    android:layout_marginVertical="@dimen/margin_small"
+                    android:gravity="center"
+                    android:text="@string/trending_hint" />
 
-                        <include
-                                android:id="@+id/people_error"
-                                layout="@layout/layout_error"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:visibility="gone" />
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 
-                    </FrameLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/drawer"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_drawer_header_layout"
+        app:menu="@menu/nav_drawer_menu" />
 
-                    <View
-                            android:id="@+id/divider"
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:background="?android:attr/listDivider"
-                            android:layout_marginHorizontal="@dimen/margin_regular"
-                            android:layout_marginTop="@dimen/margin_small" />
-
-                    <TextView
-                            android:id="@+id/text_hint"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="@dimen/margin_regular"
-                            android:layout_marginVertical="@dimen/margin_small"
-                            android:gravity="center"
-                            android:text="@string/trending_hint" />
-
-                </LinearLayout>
-
-            </ScrollView>
-
-        </LinearLayout>
-
-        <com.google.android.material.navigation.NavigationView
-                android:id="@+id/drawer"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:fitsSystemWindows="true"
-                app:menu="@menu/nav_drawer_menu"
-                app:headerLayout="@layout/nav_drawer_header_layout" />
-
-    </androidx.drawerlayout.widget.DrawerLayout>
-</layout>
+</androidx.drawerlayout.widget.DrawerLayout>
