--- a/app/src/main/res/layout/list_item_list_credits.xml
+++ b/app/src/main/res/layout/list_item_list_credits.xml
@@ -1,77 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?selectableItemBackground">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?selectableItemBackground">
+    <TextView
+        android:id="@+id/text_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_regular"
+        android:layout_marginVertical="@dimen/margin_small"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textAppearance="?textAppearanceSubtitle1"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toStartOf="@id/divider_vertical"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Человек в железной маске" />
 
-        <TextView
-                android:id="@+id/text_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_regular"
-                android:layout_marginVertical="@dimen/margin_small"
-                android:textAppearance="?textAppearanceSubtitle1"
-                android:maxLines="1"
-                android:ellipsize="end"
-                app:layout_constrainedWidth="true"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/divider_vertical"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Человек в железной маске" />
+    <TextView
+        android:id="@+id/text_character"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_regular"
+        android:layout_marginVertical="@dimen/margin_x_small"
+        android:ellipsize="end"
+        android:maxLines="1"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toStartOf="@id/divider_vertical"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_title"
+        tools:text="Porthos" />
 
-        <TextView
-                android:id="@+id/text_character"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_regular"
-                android:layout_marginVertical="@dimen/margin_x_small"
-                android:maxLines="1"
-                android:ellipsize="end"
-                app:layout_constrainedWidth="true"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/divider_vertical"
-                app:layout_constraintTop_toBottomOf="@+id/text_title"
-                tools:text="Porthos" />
+    <TextView
+        android:id="@+id/text_year"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_regular"
+        android:layout_marginVertical="@dimen/margin_small"
+        android:textAppearance="?textAppearanceBody2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="1998" />
 
-        <TextView
-                android:id="@+id/text_year"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_regular"
-                android:layout_marginVertical="@dimen/margin_small"
-                android:textAppearance="?textAppearanceBody2"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                tools:text="1998" />
+    <View
+        android:id="@+id/divider_vertical"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/margin_regular"
+        android:layout_marginVertical="@dimen/margin_regular_large"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/text_year"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <View
-                android:id="@+id/divider_vertical"
-                android:layout_width="1dp"
-                android:layout_height="0dp"
-                android:layout_marginVertical="@dimen/margin_regular_large"
-                android:layout_marginHorizontal="@dimen/margin_regular"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/text_year" />
+    <View
+        android:id="@+id/divider_horizontal"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginVertical="@dimen/margin_small"
+        android:layout_marginStart="@dimen/margin_regular"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_character" />
 
-        <View
-                android:id="@+id/divider_horizontal"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_marginVertical="@dimen/margin_small"
-                android:layout_marginStart="@dimen/margin_regular"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintTop_toBottomOf="@id/text_character"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
