--- a/app/src/main/res/layout/list_item_panel_credit.xml
+++ b/app/src/main/res/layout/list_item_panel_credit.xml
@@ -1,36 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="@dimen/panel_cinematic_item_width"
+    android:layout_height="@dimen/panel_cinematic_item_height"
+    android:layout_margin="@dimen/margin_small"
+    android:foreground="?selectableItemBackground">
 
-    <androidx.cardview.widget.CardView
-            android:layout_width="@dimen/panel_cinematic_item_width"
-            android:layout_height="@dimen/panel_cinematic_item_height"
-            android:layout_margin="@dimen/margin_small"
-            android:foreground="?selectableItemBackground">
+    <androidx.constraintlayout.utils.widget.ImageFilterView
+        android:id="@+id/image_backdrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/cinematic_backdrop_description"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_backdrop"
+        app:altSrc="@drawable/bg_gradient_bottom"
+        app:crossfade="1" />
 
-        <androidx.constraintlayout.utils.widget.ImageFilterView
-                android:id="@+id/image_backdrop"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/img_backdrop"
-                android:scaleType="centerCrop"
-                android:contentDescription="@string/cinematic_backdrop_description"
-                app:crossfade="1"
-                app:altSrc="@drawable/bg_gradient_bottom" />
+    <TextView
+        android:id="@+id/text_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginHorizontal="@dimen/margin_x_small"
+        android:layout_marginVertical="@dimen/margin_small"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:textAppearance="?textAppearanceSubtitle1"
+        android:textColor="@color/white"
+        tools:text="The Dark Knight Rises" />
 
-        <TextView
-                android:id="@+id/text_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_x_small"
-                android:layout_marginVertical="@dimen/margin_small"
-                android:maxLines="2"
-                android:ellipsize="end"
-                android:textColor="@color/white"
-                android:textAppearance="?textAppearanceSubtitle1"
-                android:layout_gravity="bottom"
-                tools:text="The Dark Knight Rises" />
-
-    </androidx.cardview.widget.CardView>
-</layout>
+</androidx.cardview.widget.CardView>
