--- a/app/src/main/res/layout/list_item_state_error.xml
+++ b/app/src/main/res/layout/list_item_state_error.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+    <TextView
+        android:id="@+id/text_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/margin_regular"
+        android:gravity="center"
+        android:text="@string/error_hint" />
 
-        <TextView
-                android:id="@+id/text_error"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_regular"
-                android:layout_gravity="center"
-                android:text="@string/error_hint"
-                android:gravity="center" />
-
-    </FrameLayout>
-</layout>
+</FrameLayout>
