--- a/app/src/main/res/layout/list_item_state_loading.xml
+++ b/app/src/main/res/layout/list_item_state_loading.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/margin_regular" />
 
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-                android:id="@+id/progress_circular"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_regular"
-                android:layout_gravity="center" />
-
-    </FrameLayout>
-</layout>
+</FrameLayout>
